--- a/test/ui_tests.html
+++ b/test/ui_tests.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
-Copyright (c) 2013, akserg (Sergey Akopkokhyants)
-https://github.com/akserg/monomer
+Copyright (c) 2013 - 2014, akserg (Sergey Akopkokhyants)
+https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
 
