Remove unnecessary escaping from template

--- a/lib/progressbar/bar.html
+++ b/lib/progressbar/bar.html
@@ -1,3 +1,3 @@
-<div class="progress-bar" ng-class="[ctrl.type, \'progress-bar-\' + ctrl.type,  ctrl.classes]" ng-pseudo="x-bar">
+<div class="progress-bar" ng-class="[ctrl.type, 'progress-bar-' + ctrl.type,  ctrl.classes]" ng-pseudo="x-bar">
     <content></content>
 </div>
