--- a/web/index.html
+++ b/web/index.html
@@ -45,6 +45,31 @@ All rights reserved.  Please see the LICENSE.md file.
    
     <hr>
 
+    <h3>Progressbar</h3>
+    <div progress-ctrl>
+        <h3>Static</h3>
+        <div class="row">
+            <div class="col-sm-4"><progressbar value="55"></progressbar></div>
+            <div class="col-sm-4"><progressbar class="progress-striped" value="22" type="warning">22%</progressbar></div>
+            <div class="col-sm-4"><progressbar class="progress-striped active" max="200" value="166" type="danger"><i>166 / 200</i></progressbar></div>
+        </div>
+
+        <hr />
+        <h3>Dynamic <button class="btn btn-sm btn-primary" type="button" ng-click="ctrl.random()">Randomize</button></h3>
+        <progressbar max="ctrl.max" value="ctrl.dynamic"><span style="color:black; white-space:nowrap;">{{ctrl.dynamic}} / {{ctrl.max}}</span></progressbar>
+
+        <small><em>No animation</em></small>
+        <progressbar animate="false" value="ctrl.dynamic" type="success"><b>{{ctrl.dynamic}}%</b></progressbar>
+
+        <small><em>Object (changes type based on value)</em></small>
+        <progressbar class="progress-striped active" value="ctrl.dynamic" type="{{ctrl.type}}">{{ctrl.type}} <i ng-show="ctrl.showWarning">!!! Watch out !!!</i></progressbar>
+
+        <hr />
+        <h3>Stacked <button class="btn btn-sm btn-primary" type="button" ng-click="ctrl.randomStacked()">Randomize</button></h3>
+        <stackedProgress><bar ng-repeat="bar in ctrl.stacked" value="bar.value" type="{{bar.type}}"><span ng-hide="bar.value < 5">{{bar.value}}%</span></bar></stackedProgress>
+    </div>
+    <hr>
+
     <h3>Buttons</h3>    
     <div buttons-ctrl>
 
