--- a/test/ui_tests.html
+++ b/test/ui_tests.html
@@ -8,6 +8,11 @@ All rights reserved.  Please see the LICENSE.md file.
 <html>
   <head>
     <title>Unit Tests for Angular Dart UI Library</title>
+    <style>
+      .ng-hide {
+         display: none !important;
+      }
+    </style>
   </head>
   <body>
     <script type="text/javascript" src="packages/unittest/test_controller.js"></script>
