--- a/lib/accordion/accordion.html
+++ b/lib/accordion/accordion.html
@@ -1,1 +1,6 @@
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div class="panel-group"><content></content></div>
