Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,14 +51,18 @@
 <li><strong>Checkbox and RadioButton</strong></li>
 <li><strong>DropdownToggle</strong></li>
 <li><strong>Collapse</strong></li>
+<li><strong>Alert</strong></li>
+<li><strong>ProgressBar</strong></li>
 </ul><h2>
 <a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h2>
 
-<p>Big thanks for yours valuable input:</p>
-
 <ul>
 <li>
+<strong>Sergey Akopkokhyants</strong> (<a href="https://github.com/akserg">https://github.com/akserg</a>)</li>
+<li>
 <strong>Tõnis Pool</strong> (<a href="https://github.com/poolik">https://github.com/poolik</a>).</li>
+<li>
+<strong>Günter Zöchbauer</strong> (<a href="https://github.com/zoechi">https://github.com/zoechi</a>)</li>
 <li>
 <strong>AngularDart project</strong> (<a href="https://github.com/angular/angular.dart">https://github.com/angular/angular.dart</a>)</li>
 </ul>
