--- a/web/index.html
+++ b/web/index.html
@@ -24,22 +24,22 @@ All rights reserved.  Please see the LICENSE.md file.
       <div ng-show="selected">Selection from a modal: {{ ctrl.selected }}</div>
       
       <modal-window id="modal_1">
-      <div class="modal-header">
-        <h3>I'm a modal!</h3>
-      </div>
-      <div class="modal-body">
-        <ul>
-          <li ng-repeat="item in ctrl.items">
-            <a ng-click="ctrl.tmp = item">{{ item }}</a>
-          </li>
-        </ul>
-        Selected: <b>{{ctrl.tmp}}</b>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="ctrl.ok(ctrl.tmp)">OK</button>
-        <button class="btn btn-warning" data-dismiss="modal">Cancel</button>
-      </div>
-    </modal>
+        <div class="modal-header">
+          <h3>I'm a modal!</h3>
+        </div>
+        <div class="modal-body">
+          <ul>
+            <li ng-repeat="item in ctrl.items">
+              <a ng-click="ctrl.tmp = item">{{ item }}</a>
+            </li>
+          </ul>
+          Selected: <b>{{ctrl.tmp}}</b>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-primary" ng-click="ctrl.ok(ctrl.tmp)">OK</button>
+          <button class="btn btn-warning" data-dismiss="modal">Cancel</button>
+        </div>
+      </modal-window>
     </div>
     
     <hr>
