--- a/web/modal_window.html
+++ b/web/modal_window.html
@@ -4,20 +4,19 @@ Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
 https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
-<modal-window>
-  <div class="modal-header">
-    <h3>I'm a modal!</h3>
-  </div>
-  <div class="modal-body">
-    <ul>
-      <li ng-repeat="item in ctrl.items">
-        <a ng-click="ctrl.tmp = item">{{ item }}</a>
-      </li>
-    </ul>
-    Selected: <b>{{ctrl.tmp}}</b>
-  </div>
-  <div class="modal-footer">
-    <button class="btn btn-primary" ng-click="ctrl.ok(ctrl.tmp)">OK</button>
-    <button class="btn btn-warning" data-dismiss="modal">Cancel</button>
-  </div>
-</modal-window>
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+  <h4 class="modal-title">I'm a modal!</h4>
+</div>
+<div class="modal-body">
+  <ul>
+    <li ng-repeat="item in ctrl.items">
+      <a ng-click="ctrl.tmp = item">{{ item }}</a>
+    </li>
+  </ul>
+  Selected: <b>{{ctrl.tmp}}</b>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  <button type="button" class="btn btn-primary" ng-click="ctrl.ok(ctrl.tmp)">OK</button>
+</div>
