Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 <li><strong>Collapse</strong></li>
 <li><strong>Alert</strong></li>
 <li><strong>ProgressBar</strong></li>
+<li><strong>Modal</strong></li>
 </ul><h2>
 <a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h2>
 
