--- a/lib/modal/window.html
+++ b/lib/modal/window.html
@@ -5,7 +5,7 @@ https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
 <div tabindex="-1" class="modal {{ m.windowClass }}" ng-class="{in: m.animate.toString()}" 
-    ng-style="{'z-index': '1050', 'display': 'block'}" ng-click="m.close($event)">
+    ng-style="{'z-index': '${1050 + index*10}', 'display': 'block'}" ng-click="m.close($event)">
     <div class="modal-dialog">
       <div class="modal-content">
         <content></content>
