--- a/web/index.html
+++ b/web/index.html
@@ -9,8 +9,7 @@ All rights reserved.  Please see the LICENSE.md file.
     <meta charset="utf-8">
     <title>Angular dart ui</title>
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/angular.css">
-    <link rel="stylesheet" href="packages/angular_ui/css/carousel.css"/>
+    <link rel="stylesheet" href="packages/angular_ui/css/angular.css">
     <link rel="stylesheet" href="main.css">
   </head>
   <body ng-cloak>
@@ -24,7 +23,7 @@ All rights reserved.  Please see the LICENSE.md file.
       <div class="panel-body">
         <div modal-ctrl-tmpl>
           <button class="btn btn-default" ng-click="ctrl.open()">Open me!</button>
-          <div ng-show="selected">Selected: {{ ctrl.selected }}</div>
+          <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected }}</div>
         </div>
       </div>
     </div>
@@ -34,7 +33,7 @@ All rights reserved.  Please see the LICENSE.md file.
       <div class="panel-body">
         <div modal-ctrl-tag-tmpl>
           <button class="btn btn-default" ng-click="ctrl.open('template_2.html')">Open me!</button>
-          <div ng-show="selected">Selected: {{ ctrl.selected + ' - ' + ctrl.other }}</div>
+          <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected + ' - ' + ctrl.other }}</div>
           
           <!-- Modal Window template -->
           
@@ -70,7 +69,7 @@ All rights reserved.  Please see the LICENSE.md file.
       <div class="panel-body">
         <div modal-ctrl-file-tmpl>
           <button class="btn btn-default" ng-click="ctrl.open('modal_window.html')">Open me!</button>
-          <div ng-show="selected">Selected: {{ ctrl.selected }}</div>
+          <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected }}</div>
         </div>
       </div>
     </div>
