--- a/web/index.html
+++ b/web/index.html
@@ -181,6 +181,9 @@ All rights reserved.  Please see the LICENSE.md file.
       </div>
     </div>
 
+    <h4>Tabs</h4>
+    <div ng-include="tabs/tabsDemo.html"></div>
+    
     <script type="application/dart" src="main.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
