Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Angular.dart.ui by akserg</title>
+    <title>Angular Dart UI by akserg</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Angular.dart.ui</h1>
+          <h1>Angular Dart UI</h1>
           <p>Port of Angular-UI to Dart.</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/akserg">akserg</a></span>
@@ -39,7 +39,7 @@
         </div>
 
         <h1>
-<a name="angulardartui-" class="anchor" href="#angulardartui-"><span class="octicon octicon-link"></span></a>angular.dart.ui <a href="https://drone.io/github.com/akserg/angular.dart.ui/latest"><img src="https://drone.io/github.com/akserg/angular.dart.ui/status.png" alt="Build Status"></a>
+<a name="angular-dart-ui-" class="anchor" href="#angular-dart-ui-"><span class="octicon octicon-link"></span></a>Angular Dart UI <a href="https://drone.io/github.com/akserg/angular.dart.ui/latest"><img src="https://drone.io/github.com/akserg/angular.dart.ui/status.png" alt="Build Status"></a>
 </h1>
 
 <p>Port of Angular-UI to Dart.</p>
