Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Angular Dart UI by akserg</title>
+    <title>Angular UI by akserg</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Angular Dart UI</h1>
+          <h1>Angular UI</h1>
           <p>Port of Angular-UI to Dart.</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/akserg">akserg</a></span>
@@ -39,7 +39,7 @@
         </div>
 
         <h1>
-<a name="angular-dart-ui-" class="anchor" href="#angular-dart-ui-"><span class="octicon octicon-link"></span></a>Angular Dart UI <a href="https://drone.io/github.com/akserg/angular.dart.ui/latest"><img src="https://drone.io/github.com/akserg/angular.dart.ui/status.png" alt="Build Status"></a>
+<a name="angular-ui-" class="anchor" href="#angular-ui-"><span class="octicon octicon-link"></span></a>Angular UI <a href="https://drone.io/github.com/akserg/angular.dart.ui/latest"><img src="https://drone.io/github.com/akserg/angular.dart.ui/status.png" alt="Build Status"></a>
 </h1>
 
 <p>Port of Angular-UI to Dart.</p>
@@ -48,24 +48,21 @@
 <a name="bootstrap-directives-and-components" class="anchor" href="#bootstrap-directives-and-components"><span class="octicon octicon-link"></span></a>Bootstrap directives and components</h3>
 
 <ul>
-<li><strong>Checkbox and RadioButton</strong></li>
-<li><strong>DropdownToggle</strong></li>
-<li><strong>Collapse</strong></li>
-<li><strong>Alert</strong></li>
-<li><strong>ProgressBar</strong></li>
-<li><strong>Modal</strong></li>
+<li>Checkbox and RadioButton</li>
+<li>DropdownToggle</li>
+<li>Collapse</li>
+<li>Alert</li>
+<li>ProgressBar</li>
+<li>Modal</li>
 </ul><h2>
 <a name="credits" class="anchor" href="#credits"><span class="octicon octicon-link"></span></a>Credits</h2>
 
 <ul>
-<li>
-<strong>Sergey Akopkokhyants</strong> (<a href="https://github.com/akserg">https://github.com/akserg</a>)</li>
-<li>
-<strong>Tõnis Pool</strong> (<a href="https://github.com/poolik">https://github.com/poolik</a>).</li>
-<li>
-<strong>Günter Zöchbauer</strong> (<a href="https://github.com/zoechi">https://github.com/zoechi</a>)</li>
-<li>
-<strong>AngularDart project</strong> (<a href="https://github.com/angular/angular.dart">https://github.com/angular/angular.dart</a>)</li>
+<li>Sergey Akopkokhyants (<a href="https://github.com/akserg">https://github.com/akserg</a>)</li>
+<li>Tõnis Pool (<a href="https://github.com/poolik">https://github.com/poolik</a>).</li>
+<li>Günter Zöchbauer (<a href="https://github.com/zoechi">https://github.com/zoechi</a>)</li>
+<li>Francesco Cina (<a href="https://github.com/ufoscout">https://github.com/ufoscout</a>)</li>
+<li>AngularDart project (<a href="https://github.com/angular/angular.dart">https://github.com/angular/angular.dart</a>)</li>
 </ul>
       </section>
 
