Fixed vertical tabs style

--- a/web/tabs/tabsDemo.html
+++ b/web/tabs/tabsDemo.html
@@ -29,7 +29,7 @@ All rights reserved.  Please see the LICENSE.md file.
 
   <hr />
 
-  <tabset vertical="true" type="pills">
+  <tabset vertical="true" type="'pills'">
     <tab heading="Vertical 1">Vertical content 1</tab>
     <tab heading="Vertical 2">Vertical content 2</tab>
   </tabset>
