--- a/lib/datepicker/datepicker.html
+++ b/lib/datepicker/datepicker.html
@@ -7,20 +7,20 @@ All rights reserved.  Please see the LICENSE.md file.
 <table>
   <thead>
     <tr>
-      <th><button type="button" class="btn btn-default btn-sm pull-left" ng-click="move(-1)"><i class="glyphicon glyphicon-chevron-left"></i></button></th>
-      <th colspan="{{rows[0].length - 2 + showWeekNumbers}}"><button type="button" class="btn btn-default btn-sm btn-block" ng-click="toggleMode()"><strong>{{title}}</strong></button></th>
-      <th><button type="button" class="btn btn-default btn-sm pull-right" ng-click="move(1)"><i class="glyphicon glyphicon-chevron-right"></i></button></th>
+      <th><button type="button" class="btn btn-default btn-sm pull-left" ng-click="d.move(-1)"><i class="glyphicon glyphicon-chevron-left"></i></button></th>
+      <th colspan="{{d.rows[0].length - 2 + (d.showWeekNumbers ? 1 : 0)}}"><button type="button" class="btn btn-default btn-sm btn-block" ng-click="d.toggleMode()"><strong>{{d.title}}</strong></button></th>
+      <th><button type="button" class="btn btn-default btn-sm pull-right" ng-click="d.move(1)"><i class="glyphicon glyphicon-chevron-right"></i></button></th>
     </tr>
-    <tr ng-show="labels.length > 0" class="h6">
-      <th ng-show="showWeekNumbers" class="text-center">#</th>
-      <th ng-repeat="label in labels" class="text-center">{{label}}</th>
+    <tr ng-show="d.labels.length > 0" class="h6">
+      <th ng-show="d.showWeekNumbers" class="text-center">#</th>
+      <th ng-repeat="label in d.labels" class="text-center">{{label}}</th>
     </tr>
   </thead>
   <tbody>
-    <tr ng-repeat="row in rows">
-      <td ng-show="showWeekNumbers" class="text-center"><em>{{ getWeekNumber(row) }}</em></td>
+    <tr ng-repeat="row in d.rows">
+      <td ng-show="d.showWeekNumbers" class="text-center"><em>{{ d.getWeekNumber(row.toList()) }}</em></td>
       <td ng-repeat="dt in row" class="text-center">
-        <button type="button" style="width:100%;" class="btn btn-default btn-sm" ng-class="{'btn-info': dt.selected}" ng-click="select(dt.date)" ng-disabled="dt.disabled"><span ng-class="{'text-muted': dt.secondary}">{{dt.label}}</span></button>
+        <button type="button" style="width:100%;" class="btn btn-default btn-sm" ng-class="{'btn-info': dt.selected}" ng-click="d.select(dt.date)" ng-disabled="dt.disabled"><span ng-class="{'text-muted': dt.secondary}">{{dt.label}}</span></button>
       </td>
     </tr>
   </tbody>
