--- a/lib/datepicker/popup.html
+++ b/lib/datepicker/popup.html
@@ -4,11 +4,11 @@ Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
 https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
-<ul class="dropdown-menu" ng-style="{display: (d.isOpen && 'block') || 'none', top: d.position.top+'px', left: d.position.left+'px'}">
-	<li ng-transclude></li>
+<ul class="dropdown-menu" ng-style="{'display':d.display, 'top':d.top, 'left':d.left}">
+	<li><content></content></li>
 	<li ng-show="d.showButtonBar" style="padding:10px 9px 2px">
 		<span class="btn-group">
-			<button type="button" class="btn btn-sm btn-info" ng-click="d.today()">{{currentText}}</button>
+			<button type="button" class="btn btn-sm btn-info" ng-click="d.today()">{{d.currentText}}</button>
 			<button type="button" class="btn btn-sm btn-default" ng-click="d.showWeeks = ! d.showWeeks" ng-class="{active: d.showWeeks}">{{d.toggleWeeksText}}</button>
 			<button type="button" class="btn btn-sm btn-danger" ng-click="d.clearDate()">{{d.clearText}}</button>
 		</span>
