--- a/lib/datepicker/datepicker-popup.html
+++ b/lib/datepicker/datepicker-popup.html
@@ -8,9 +8,10 @@ All rights reserved.  Please see the LICENSE.md file.
   ng-model='dp.date' ng-change='dp.dateSelection()'
   is-open='dp.isOpen' position='dp.position' 
   show-button-bar='dp.showButtonBar' today='dp.today()' 
-  show-weeks='dp.showWeeks' clear-date='dp.clearDate'
+  show-weeks='dp.showWeeks' clear-date='dp.clearDate()'
   current-text='dp.currentText' toggle-weeks-text='dp.toggleWeeksText'
   close-text='dp.closeText' clear-text='dp.clearText'>
+  
   <div datepicker datepicker-options='dp.datepickerOptions' 
     min='dp.minDate' max='dp.maxDate' ng-model='dp.date'
     show-weeks='dp.showWeeks' date-disabled='dp.dateDisabled'></div>
