--- a/lib/datepicker/datepicker.html
+++ b/lib/datepicker/datepicker.html
@@ -11,7 +11,7 @@ All rights reserved.  Please see the LICENSE.md file.
       <th colspan="{{d.rows[0].length - 2 + (d.showWeekNumbers ? 1 : 0)}}"><button type="button" class="btn btn-default btn-sm btn-block" ng-click="d.toggleMode()"><strong>{{d.title}}</strong></button></th>
       <th><button type="button" class="btn btn-default btn-sm pull-right" ng-click="d.move(1)"><i class="glyphicon glyphicon-chevron-right"></i></button></th>
     </tr>
-    <tr ng-show="d.labels.length > 0" class="h6">
+    <tr ng-show="d.labels != null && d.labels.length > 0" class="h6">
       <th ng-show="d.showWeekNumbers" class="text-center">#</th>
       <th ng-repeat="label in d.labels" class="text-center">{{label}}</th>
     </tr>
