--- a/lib/datepicker/popup.html
+++ b/lib/datepicker/popup.html
@@ -4,14 +4,14 @@ Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
 https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
-<ul class="dropdown-menu" ng-style="{'display':d.display, 'top':d.top, 'left':d.left}">
+<ul class="dropdown-menu" ng-style="{'display':d.display, 'top':top, 'left':left}">
 	<li><content></content></li>
-	<li ng-show="d.showButtonBar" style="padding:10px 9px 2px">
+	<li ng-show="showButtonBar" style="padding:10px 9px 2px">
 		<span class="btn-group">
-			<button type="button" class="btn btn-sm btn-info" ng-click="d.today()">{{d.currentText}}</button>
-			<button type="button" class="btn btn-sm btn-default" ng-click="d.showWeeks = ! d.showWeeks" ng-class="{active: d.showWeeks}">{{d.toggleWeeksText}}</button>
-			<button type="button" class="btn btn-sm btn-danger" ng-click="d.clearDate()">{{d.clearText}}</button>
+			<button type="button" class="btn btn-sm btn-info" ng-click="today()">{{currentText}}</button>
+			<button type="button" class="btn btn-sm btn-default" ng-click="showWeeks = ! showWeeks" ng-class="{active: showWeeks}">{{toggleWeeksText}}</button>
+			<button type="button" class="btn btn-sm btn-danger" ng-click="clearDate()">{{clearText}}</button>
 		</span>
-		<button type="button" class="btn btn-sm btn-success pull-right" ng-click="d.isOpen = false">{{d.closeText}}</button>
+		<button type="button" class="btn btn-sm btn-success pull-right" ng-click="isOpen = false">{{closeText}}</button>
 	</li>
 </ul>
