--- a/lib/progressbar/bar.html
+++ b/lib/progressbar/bar.html
@@ -1,8 +1,4 @@
-<!--
-Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
-https://github.com/akserg/angular.dart.ui
-All rights reserved.  Please see the LICENSE.md file.
--->
+<!DOCTYPE html>
 <div class="progress-bar" ng-class="[ctrl.type, 'progress-bar-' + ctrl.type,  ctrl.classes]" ng-pseudo="x-bar">
     <content></content>
 </div>
