--- a/web/index.html
+++ b/web/index.html
@@ -57,6 +57,10 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <div ng-include="carousel/carousel_demo.html"></div> -->
 <!--     </div> -->
     
+    <h3>Drag And Drop</h3>
+    <div ng-include="dragdrop/dragdrop_demo.html"></div>
+    <hr>
+        
     <script type="application/dart" src="main.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
