Improved shopping cart adding costs

--- a/web/dragdrop/dragdrop_demo.html
+++ b/web/dragdrop/dragdrop_demo.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <div >
+  <h4>Drag And Drop - Shopping basket</h4>
   <div class="row" dd-shopping-demo-controller>
     <div class="col-sm-3">
       <div class="panel panel-success">
-        <div class="panel-heading">Choose your products</div>
+        <div class="panel-heading">Available products</div>
         <div class="panel-body">
           <div ng-repeat="product in shoppingCtrl.availableProducts" class="panel panel-default" ng-show="product.quantity>0"
             ui-draggable draggable-data="product" on-drag-success="shoppingCtrl.orderedProduct(product)">
             <div class="panel-body">
-              {{product.name}} (available: {{product.quantity}})
+              {{product.name}} - ${{product.cost}} (available: {{product.quantity}})
             </div>
           </div>        
         </div>
@@ -16,11 +17,11 @@
     </div>
     <div class="col-sm-3">
       <div ui-droppable on-drop-success="shoppingCtrl.addToBasket(data)" class="panel panel-info">
-        <div class="panel-heading">Shopping Basket (Drop here)</div>
+        <div class="panel-heading">Shopping Basket (to pay: ${{shoppingCtrl.totalCost()}})</div>
         <div class="panel-body">
           <div ng-repeat="product in shoppingCtrl.shoppingBasket" class="panel panel-default">
             <div class="panel-body">
-              {{product.name}} (ordered: {{product.quantity}})
+              {{product.name}} (ordered: {{product.quantity}} cost: ${{product.cost * product.quantity}})
             </div>
           </div>
         </div>
