--- a/web/dragdrop/dragdrop_demo.html
+++ b/web/dragdrop/dragdrop_demo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<div >
+<div>
 
 
   <h4>Drag And Drop - Shopping basket</h4>
@@ -103,4 +103,34 @@
       </div>
     </div>    
   </div>
+  
+  <h4>Drag And Drop - Draggable element with handler</h4>
+  <div class="row" dd-handler-demo-controller>
+    <div class="col-sm-3">
+      <div class="panel panel-warning">
+        <div class="panel-heading">To Do</div>
+        <div class="panel-body">
+          <div ng-repeat="item in listCtrl.todoList" class="panel panel-default"
+            ui-draggable draggable-data="item" on-drag-success="listCtrl.done(item)">
+            <div class="panel-body">
+              <span draggable-handler class="glyphicon glyphicon-move"></span> {{item}}
+            </div>
+          </div>        
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <div class="panel panel-info" ui-droppable>
+        <div class="panel-heading">Done</div>
+        <div class="panel-body">
+          <div ng-repeat="item in listCtrl.doneList" class="panel panel-default">
+            <div class="panel-body">
+              <span class="glyphicon glyphicon-remove-circle" ng-click="listCtrl.undo(item)"></span> {{item}}
+            </div>
+          </div>        
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
