--- a/lib/timepicker/timepicker.html
+++ b/lib/timepicker/timepicker.html
@@ -7,13 +7,15 @@
 			<td><a ng-click="incrementMinutes()" class="btn btn-link"><span class="glyphicon glyphicon-chevron-up"></span></a></td>
 			<td ng-show="showMeridian"></td>
 		</tr>
-		<tr>
+		<tr id="times">
 			<td style="width:50px;" class="form-group" ng-class="{'has-error': invalidHours}">
-				<input type="text" ng-model="hours" ng-change="updateHours()" class="form-control text-center" ng-mousewheel="incrementHours()" ng-readonly="readonlyInput" maxlength="2">
+        <!--input id="hours" type="text" ng-change="updateHours()" class="form-control text-center" ng-mousewheel="incrementHours()" ng-readonly="readonlyInput" maxlength="2"-->
+        <input id="hours" type="text" ng-change="updateHours()" class="form-control text-center" ng-readonly="readonlyInput" maxlength="2">
 			</td>
 			<td>:</td>
 			<td style="width:50px;" class="form-group" ng-class="{'has-error': invalidMinutes}">
-				<input type="text" ng-model="minutes" ng-change="updateMinutes()" class="form-control text-center" ng-readonly="readonlyInput" maxlength="2">
+        <!--input id="minutes" type="text" ng-change="updateMinutes()" class="form-control text-center" ng-mousewheel="incrementMinutes()" ng-readonly="readonlyInput" maxlength="2"-->        
+        <input id="minutes" type="text" ng-change="updateMinutes()" class="form-control text-center" ng-readonly="readonlyInput" maxlength="2">
 			</td>
 			<td ng-show="showMeridian"><button type="button" class="btn btn-default text-center" ng-click="toggleMeridian()">{{meridian}}</button></td>
 		</tr>
