--- a/web/timepicker/timepicker_demo.html
+++ b/web/timepicker/timepicker_demo.html
@@ -17,11 +17,15 @@ All rights reserved.  Please see the LICENSE.md file.
   <div class="row"> 
     <div class="col-xs-6">
         Hours step is:
-      <select class="form-control" ng-model="timepickerCtrl.hstep" ng-options="opt for opt in timepickerCtrl.options['hstep']"></select>
+      <select class="form-control" ng-model="timepickerCtrl.hstep">
+        <option ng-repeat="opt in timepickerCtrl.options['hstep']" ng-value="opt">{{opt}}</option>
+      </select>
     </div>
     <div class="col-xs-6">
         Minutes step is:
-      <select class="form-control" ng-model="timepickerCtrl.mstep" ng-options="opt for opt in timepickerCtrl.options['mstep']"></select>
+      <select class="form-control" ng-model="timepickerCtrl.mstep">
+        <option ng-repeat="opt in timepickerCtrl.options['mstep']" ng-value="opt">{{opt}}</option>
+      </select>
     </div>
   </div>
 
