--- a/lib/accordion/accordion_group.html
+++ b/lib/accordion/accordion_group.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div class="panel panel-default">
   <div class="panel-heading">
     <h4 class="panel-title">
