--- a/lib/alert/alert.html
+++ b/lib/alert/alert.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div class='alert' ng-class='t.alertTypeAsString'>
   <button type='button' class='close' data-dismiss='alert' ng-hide='t.showable' ng-click='t.closeHandler()'>&times;</button>
   <content/>
