--- a/lib/carousel/carousel.html
+++ b/lib/carousel/carousel.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div ng-mouseenter='c.pause()' ng-mouseleave='c.play()' class='carousel'>
   <ol class='carousel-indicators' ng-show='c.slides.length > 1'>
     <li ng-repeat='slide in c.slides' ng-class='{active: c.isActive(slide)}' ng-click='c.select(slide)'></li>
