--- a/lib/progressbar/progressbar.html
+++ b/lib/progressbar/progressbar.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div class="progress" ng-class="ctrl.classes">
     <div class="progress-bar" ng-class="[ctrl.type, 'progress-bar-' + ctrl.type]">
         <content></content>
