--- a/web/buttons/buttons_demo.html
+++ b/web/buttons/buttons_demo.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div buttons-ctrl>
   <h4>Single toggle</h4>
   <pre>{{ctrl.singleModel}}</pre>
