--- a/web/carousel/carousel_demo.html
+++ b/web/carousel/carousel_demo.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div ng-controller="carousel-demo-ctrl">
   <div style="height: 305px">
     <carousel interval="ctrl.myInterval">
@@ -16,7 +21,7 @@
       <a class="btn btn-info" ng-click="ctrl.addSlide()">Add Slide</a>
     </div>
     <div class="col-md-6">
-      Interval, in milliseconds: <input type="number" class="form-control" ng-model="ctrl.myIntervalAsString">
+      Interval, in milliseconds: <input type="number" class="form-control" ng-model="ctrl.myInterval" ng-value="ctrl.myInterval">
       <br />Enter a negative number to stop the interval.
     </div>
   </div>
