--- a/web/collapse/collapse_demo.html
+++ b/web/collapse/collapse_demo.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div collapse-ctrl>
   <button class="btn btn-default" ng-click="ctrl.isCollapsed = !ctrl.isCollapsed">Toggle collapse</button>
   
