--- a/web/dragdrop/dragdrop_demo.html
+++ b/web/dragdrop/dragdrop_demo.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div>
-
-
   <h4>Drag And Drop - Shopping basket</h4>
   <div class="row" dd-shopping-demo-controller>
     <div class="col-sm-3">
