--- a/web/dropdown_toggle/dropdown_toggle_demo.html
+++ b/web/dropdown_toggle/dropdown_toggle_demo.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div class="dropdown" dropdown-ctrl>
   <button class="btn" dropdown-toggle type="button">Dropdown <span class="caret"></span></button>
   <ul class="dropdown-menu">
