--- a/web/index.html
+++ b/web/index.html
@@ -65,9 +65,8 @@ All rights reserved.  Please see the LICENSE.md file.
     <div ng-include="tabs/tabs_demo.html"></div>
     <hr>
     
-<!--     h3>Carousel</h3> -->
-<!--     <div ng-include="carousel/carousel_demo.html"></div> -->
-<!--     </div> -->
+    <h3>Carousel</h3>
+    <div ng-include="carousel/carousel_demo.html"></div>
     
     <script type="application/dart" src="main.dart"></script>
     <script src="packages/browser/dart.js"></script>
