--- a/web/tabs/tabs_demo.html
+++ b/web/tabs/tabs_demo.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div tabs-demo-controller>
   <p>Select a tab by setting active binding to true:</p>
   <p>
