--- a/lib/pagination/pager.html
+++ b/lib/pagination/pager.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <ul class="pager">
     <li class="previous" ng-class="{disabled: ctrl.currentPage == 1}"><a href ng-click="ctrl.selectPage(ctrl.currentPage - 1)">« Previous</a>
     </li>
