--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@ All rights reserved.  Please see the LICENSE.md file.
   <body ng-cloak>
     <h1>Angular Dart UI</h1>
     <hr>
-    
+
     <h3>Timepicker</h3>
     <div ng-include="timepicker/timepicker_demo.html"></div>
     <hr>
@@ -51,6 +51,10 @@ All rights reserved.  Please see the LICENSE.md file.
     
     <h3>Dropdown Toggle</h3>
     <div ng-include="dropdown_toggle/dropdown_toggle_demo.html"></div>
+    <hr>
+
+    <h3>Pagination</h3>
+    <div ng-include="progressbar/progressbar_demo.html"></div>
     <hr>
 
     <h3>Progressbar</h3>
