--- a/lib/pagination/pager.html
+++ b/lib/pagination/pager.html
@@ -5,8 +5,8 @@ https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
 <ul class="pager">
-    <li class="previous" ng-class="{disabled: ctrl.currentPage == 1}"><a href ng-click="ctrl.selectPage(ctrl.currentPage - 1)">« Previous</a>
+    <li ng-class="{disabled: ctrl.noPrevious, previous : ctrl.align}"><a href ng-click="ctrl.selectPage(ctrl.currentPage - 1)">{{ctrl.previousText}}</a>
     </li>
-    <li class="next" ng-class="{disabled: ctrl.currentPage == ctrl.totalPages}"><a href ng-click="ctrl.selectPage(ctrl.currentPage + 1)">Next »</a>
+    <li ng-class="{disabled: ctrl.noNext, next : ctrl.align}"><a href ng-click="ctrl.selectPage(ctrl.currentPage + 1)">{{ctrl.nextText}}</a>
     </li>
 </ul>
