--- a/web/pagination/pagination_demo.html
+++ b/web/pagination/pagination_demo.html
@@ -22,4 +22,7 @@ All rights reserved.  Please see the LICENSE.md file.
     <div class="row">
         <div class="col-sm-4"><pager total-items="ctrl.totalItems" items-per-page="ctrl.itemsPerPage" num-pages="totalPages" ng-model="ctrl.currentPage"></pager></div>
     </div>
+    <div class="row">
+        <div class="col-sm-4"><pagination total-items="ctrl.totalItems" items-per-page="ctrl.itemsPerPage" num-pages="totalPages" ng-model="ctrl.currentPage"></pagination></div>
+    </div>
 </div>
