--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,10 @@ All rights reserved.  Please see the LICENSE.md file.
     <h1>Angular Dart UI</h1>
     <hr>
     
+    <h3>Popover</h3>
+    <div ng-include="popover/popover_demo.html"></div>
+    <hr>
+    
     <h3>Tooltip</h3>
     <div ng-include="tooltip/tooltip_demo.html"></div>
     <hr>
