--- a/web/tooltip/tooltip_demo.html
+++ b/web/tooltip/tooltip_demo.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
+https://github.com/akserg/angular.dart.ui
+All rights reserved.  Please see the LICENSE.md file.
+-->
 <div tooltip-demo-controller>
     <div class="form-group">
       <label>Dynamic Tooltip Text</label>
