--- a/web/index.html
+++ b/web/index.html
@@ -33,9 +33,13 @@ All rights reserved.  Please see the LICENSE.md file.
 <!--     <div ng-include="timepicker/timepicker_demo.html"></div> -->
 <!--     <hr> -->
     
-<!--     <h3>Drag And Drop</h3> -->
-<!--     <div ng-include="dragdrop/dragdrop_demo.html"></div> -->
-<!--     <hr> -->
+    <h3>Drag And Drop</h3>
+    <div ng-include="dragdrop/dragdrop_demo.html"></div>
+    <hr>
+    
+    <h3>Drag And Drop - Sortable</h3>
+    <div ng-include="dragdrop/sortable_demo.html"></div>
+    <hr>
 
 <!--     <h3>Datepicker (partially implemented)</h3> -->
 <!--     <div ng-include="datepicker/datepicker_demo.html"></div> -->
