--- a/web/modal/modal_demo.html
+++ b/web/modal/modal_demo.html
@@ -4,6 +4,30 @@ Copyright (C) 2013 - 2014 Angular Dart UI authors. Please see AUTHORS.md.
 https://github.com/akserg/angular.dart.ui
 All rights reserved.  Please see the LICENSE.md file.
 -->
+<script type="text/ng-template" id="template_2.html">
+<div class="modal-header">
+  <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+  <h4 class="modal-title">I'm a modal!</h4>
+</div>
+<div class="modal-body">
+  <ul>
+    <li ng-repeat="item in ctrl.items">
+      <a ng-click="ctrl.tmp = item">{{ item }}</a>
+    </li>
+  </ul>
+  Selected: <b>{{ctrl.tmp}}</b><br>
+  Other Selected: <b>{{ctrl.other}}</b>
+  <hr>
+  <div modal-ctrl-other-tmpl ng-model="ctrl.other">
+    <a ng-click="ctrl2.open('modal/modal_window2.html')">Open other Modal Window</a>
+  </div>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+  <button type="button" class="btn btn-primary" ng-click="ctrl.ok(ctrl.tmp)">OK</button>
+</div>
+</script>
+
 <div class="panel panel-default">
   <div class="panel-heading">Modal from template string</div>
   <div class="panel-body">
@@ -20,30 +44,6 @@ All rights reserved.  Please see the LICENSE.md file.
     <div modal-ctrl-tag-tmpl>
       <button class="btn btn-default" ng-click="ctrl.open('template_2.html')">Open me!</button>
       <div ng-show="ctrl.selected != null">Selected: {{ ctrl.selected + ' - ' + ctrl.other }}</div>
-      
-      <template id="template_2.html" type="text/ng-template">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">I'm a modal!</h4>
-        </div>
-        <div class="modal-body">
-          <ul>
-            <li ng-repeat="item in ctrl.items">
-              <a ng-click="ctrl.tmp = item">{{ item }}</a>
-            </li>
-          </ul>
-          Selected: <b>{{ctrl.tmp}}</b><br>
-          Other Selected: <b>{{ctrl.other}}</b>
-          <hr>
-          <div modal-ctrl-other-tmpl ng-model="ctrl.other">
-            <a ng-click="ctrl2.open('modal/modal_window2.html')">Open other Modal Window</a>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" ng-click="ctrl.ok(ctrl.tmp)">OK</button>
-        </div>
-      </template>
     </div>
   </div>
 </div>
