--- a/lib/datepicker/popup.html
+++ b/lib/datepicker/popup.html
@@ -10,7 +10,7 @@ All rights reserved.  Please see the LICENSE.md file.
 		<span class="btn-group">
 			<button type="button" class="btn btn-sm btn-info" ng-click="today()">{{currentText}}</button>
 			<button type="button" class="btn btn-sm btn-default" ng-click="showWeeks = ! showWeeks" ng-class="{active: showWeeks}">{{toggleWeeksText}}</button>
-			<button type="button" class="btn btn-sm btn-danger" ng-click="clearDate()">{{clearText}}</button>
+			<button type="button" class="btn btn-sm btn-danger" ng-click="clear()">{{clearText}}</button>
 		</span>
 		<button type="button" class="btn btn-sm btn-success pull-right" ng-click="isOpen = false">{{closeText}}</button>
 	</li>
