--- a/web/carousel/carousel_demo.html
+++ b/web/carousel/carousel_demo.html
@@ -6,7 +6,7 @@ All rights reserved.  Please see the LICENSE.md file.
 -->
 <div ng-controller="carousel-demo-ctrl">
   <div style="height: 305px">
-    <carousel interval="ctrl.myInterval">
+    <carousel interval="ctrl.myInterval * 1000">
       <slide ng-repeat="slide in ctrl.slides" active="slide['active']">
         <img ng-src="{{slide['image']}}" style="margin:auto;">
         <div class="carousel-caption">
@@ -17,12 +17,13 @@ All rights reserved.  Please see the LICENSE.md file.
     </carousel>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-3">
       <a class="btn btn-info" ng-click="ctrl.addSlide()">Add Slide</a>
     </div>
-    <div class="col-md-6">
-      Interval, in milliseconds: <input type="number" class="form-control" ng-model="ctrl.myInterval" ng-value="ctrl.myInterval">
-      <br />Enter a negative number to stop the interval.
+    <div class="col-md-5">
+      Interval, in milliseconds:
+      <input type="number" class="form-control" ng-model="ctrl.myInterval" ng-value="ctrl.myInterval | stringify">
+      Enter a negative number to stop the interval.
     </div>
   </div>
 </div>
