--- a/web/datepicker/datepicker_demo.html
+++ b/web/datepicker/datepicker_demo.html
@@ -16,7 +16,7 @@ All rights reserved.  Please see the LICENSE.md file.
     </div>
     
     <h4>Inline</h4>
-    <div style="display:inline-block; min-height:290px;">
+    <div style="display:inline-block;">
       <div class="well well-sm">
           <datepicker ng-model="ctrl.dt" min="ctrl.minDate" show-weeks="ctrl.showWeeks"></datepicker>
       </div>
