--- a/web/popover/popover_demo.html
+++ b/web/popover/popover_demo.html
@@ -18,20 +18,23 @@ All rights reserved.  Please see the LICENSE.md file.
     
     <hr />
     <h4>Positional</h4>
-    <button popover-placement="top" popover="On the Top!" class="btn btn-default">Top</button>
-    <button popover-placement="left" popover="On the Left!" class="btn btn-default">Left</button>
-    <button popover-placement="right" popover="On the Right!" class="btn btn-default">Right</button>
-    <button popover-placement="bottom" popover="On the Bottom!" class="btn btn-default">Bottom</button>
-    
+    <div class="row">
+      <div class="col-sm-5 col-md-offset-5">
+        <button popover-placement="top" popover="On the Top!" class="btn btn-default">Top</button>
+        <button popover-placement="left" popover="On the Left!" class="btn btn-default">Left</button>
+        <button popover-placement="right" popover="On the Right!" class="btn btn-default">Right</button>
+        <button popover-placement="bottom" popover="On the Bottom!" class="btn btn-default">Bottom</button>
+      </div>
+    </div>
     <hr />
     <h4>Triggers</h4>
     <p>
-      <button popover="I appeared on mouse enter!" popover-trigger="mouseenter" class="btn btn-default">Mouseenter</button>
+      <button popover="I appeared on mouse enter!" popover-trigger="mouseenter" popover-placement="right" class="btn btn-default">Mouseenter</button>
     </p>
     <input type="text" value="Click me!" popover="I appeared on focus! Click away and I'll vanish..."  popover-trigger="focus" class="form-control">
 
     <hr />
     <h4>Other</h4>
-    <button Popover-animation="true" popover="I fade in and out!" class="btn btn-default">fading</button>
+    <button Popover-animation="true" popover="I fade in and out!" popover-placement="right" class="btn btn-default">fading</button>
     <button popover="I have a title!" popover-title="The title." class="btn btn-default">title</button>
 </div>
