Start Upgrade to angular 1.0

--- a/web/dragdrop/dragdrop_demo.html
+++ b/web/dragdrop/dragdrop_demo.html
@@ -7,6 +7,15 @@ All rights reserved.  Please see the LICENSE.md file.
 <div>
   <h4>Drag And Drop - Shopping basket</h4>
   <div class="row" dd-shopping-demo-controller>
+  - {{value}} -
+  
+    <div ng-if="valid">
+    valid
+    </div>
+    <div ng-if="!valid">
+    not valid
+    </div>
+    
     <div class="col-sm-3">
       <div class="panel panel-success">
         <div class="panel-heading">Available products</div>
